// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server should correctly render complex structures 1`] = `""`;

exports[`server should correctly render complex structures 2`] = `
<span id="body" class="center">
  <center>
    <div id="large" style="height: 200px; margin-top: 90px;">
      <div style="padding-top: 100px;">
        <div title="Test" align="left" id="logo" style="background-size: 250px 90px; height: 90px; width: 250px;">
          <div class="logo-subtext">Subtext</div>
        </div>
      </div>
    </div>
    <div style="height: 120px;"></div>
    <div id="prompt" style="margin-top: 10px;">
      <div id="alias">
        <div id="offer">Example.com offered in:
          <a href="https://example.com">Français</a>
        </div>
      </div>
      <div id="swimlanes"></div>
    </div>
  </center>
</span>
`;

exports[`standard examples should correctly render the button example 1`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">0</span>
  </button>
  <button>def
    <span style="font-size: 6px;">0</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`standard examples should correctly render the button example 2`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">1</span>
  </button>
  <button>def
    <span style="font-size: 6px;">0</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`standard examples should correctly render the button example 3`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">1</span>
  </button>
  <button>def
    <span style="font-size: 6px;">3</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`standard examples should correctly render the button example 4`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">1</span>
  </button>
  <button>def
    <span style="font-size: 6px;">1</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`standard examples should correctly render the button example 5`] = `
<div class="buttons">
  <button>abc
    <span style="font-size: 6px;">1</span>
  </button>
  <button>def
    <span style="font-size: 6px;">2</span>
  </button>
  <button>ghi
    <span style="font-size: 6px;">0</span>
  </button>
</div>
`;

exports[`standard examples should correctly render the fruit example 1`] = `
<ul class="fruit-list">
  <li class="fruit">orange</li>
  <li class="fruit">apple</li>
  <li class="fruit">pear</li>
</ul>
`;

exports[`standard examples should correctly render the router example 1`] = `
<div>
  <span>title1</span>
  <span>title2</span>
  <span>title3</span>
</div>
`;

exports[`standard examples should correctly render the router example 2`] = `
<div>
  <button>home</button>
  <br>
  <h1>title2</h1>
  <p>content2</p>
</div>
`;

exports[`standard examples should correctly render the router example 3`] = `
<div>
  <span>title1</span>
  <span>title2</span>
  <span>title3</span>
</div>
`;
